ajustement du visuel de la première page

--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,7 @@
 
-.coin{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 5%;
-    width: 10%;
+.coin
+{
+
 }
 
 
@@ -17,7 +14,27 @@
     margin-bottom: 5%;
 }
 
+.wantFight
+{
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.wantFightSize
+{
+    font-size: 2rem;
+    font-family: 'Bangers', cursive;
+}
+
+.banner
+{
+    max-height: 500px;
+
+}
+
 /**<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12  ">
 <h1>THE FIGHT</h1>
 </div>
 <div class="row m-0 p-0 photo_bannier stats_bannier img-fluid">
+<img src="img/coin.png" class="">
