--- a/src/resumeStyle.css
+++ b/src/resumeStyle.css
@@ -2,15 +2,30 @@
     position: absolute;
     width: 380px;
     height: 420px;
+    margin-top: 300px;
 }
 
 .Luigi{
     position: absolute;
-    width: 300px;
+    width: 280 px;
     height: 450px;
+    margin-top: 300px;
+
+}
+
+.winner{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
 }
 
 body{
     background-color: black;
     color: white;
+}
+
+.round{
+    background-color: white;
+    color: black;
 }
