--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,13 @@
 
 .coin
 {
-
-}
-
-
-.versus{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 10%;
-    margin-top: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 20px;
+    border: 3px solid white;
 }
+
 
 .wantFight
 {
@@ -28,6 +23,7 @@
     border-radius: 15px;
     font-family: 'Bangers', cursive;
     background-image: url("img/33780.gif");
+    margin-bottom: 350px;
 }
 
 .wantFightSize
@@ -45,23 +41,4 @@
 
 }
 
-.fondTitre
-{
-    background-color: rgba(255, 255, 255, 0.6);
-    border-radius: 15px;
-    margin-bottom: 1em;
-}
 
-/**[class*="col-"]
-{
-    border: 2px solid black;
-    border-radius: 6px;
-    line-height: 40px;
-    text-align: center;
-}
-
-/**<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12  ">
-<h1>THE FIGHT</h1>
-</div>
-<div class="row m-0 p-0 photo_bannier stats_bannier img-fluid">
-<img src="img/coin.png" class="">
