--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,10 @@
 
 }
 
+[class*= "col"] {
+    border: 1px black solid;
+}
+
 /**<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12  ">
 <h1>THE FIGHT</h1>
 </div>
